--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   get: ^4.7.2
+
   image_picker: ^1.1.2
+  flutter_bloc: ^9.1.1
   flutter_screenutil: ^5.9.3
   search_choices: ^2.3.1
   filter_list: ^1.0.3
