--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   filter_list: ^1.0.3
   dotted_border: ^2.1.0
   shared_preferences: ^2.5.3
+  file_picker: ^10.2.0
+  cached_network_image: ^3.4.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
