--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   shared_preferences: ^2.5.3
   file_picker: ^10.2.0
   cached_network_image: ^3.4.1
+  path_provider: ^2.1.5
+  path: ^1.9.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
